--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     
     <body>
-        <h1>Pierwsza strona www</h1>
+        <h1>Moja pierwsza strona www</h1>
         <p></p>
         
         <h2>O mnie</h2>
