--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     
     <body>
-        <h1>Moja pierwsza prosta strona www</h1>
-        <p></p>
+        <h1>Pierwsza prosta strona www</h1>
+        <p>To jest prosta strona</p>
         
         <h2>Coś o mnie</h2>
         <p>Nazywam się Jacek Woźniak i mam 40 lat. Jestem rodowitym wrocławianinem. Ukończyłem Wydział Mechaniczny na Politechnice Wrocławskiej.</p>
