--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2>Coś o mnie</h2>
         <p>Nazywam się Jacek Woźniak i mam 40 lat. Jestem rodowitym wrocławianinem. Ukończyłem Wydział Mechaniczny na Politechnice Wrocławskiej.</p>
         
-        <h2>Rodzina</h2>
+        <h2>Moja rodzina</h2>
         <p>Jestem żonaty. Mam dwóch synów: Szymon ma 6 lat a Bartosz 6 miesięcy.</P><br/>
         <img src="https://images.pexels.com/photos/130111/pexels-photo-130111.jpeg" width="300" height="150">
             
