--- a/index.html
+++ b/index.html
@@ -25,4 +25,7 @@
         <h2>Walidacja</h2>
         <p><a href="https://pasteboard.co/I8tOdq0.png" target="_blank">Wynik walidacji</a></p>
     </body>
+	<footer>
+		<p>Copyright 2019</p>
+	</footer>
 </html>
