--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
         <p><a href="https://pasteboard.co/I8tOdq0.png" target="_blank">Wynik walidacji</a></p>
     </body>
 	<footer>
-		<p>Copyright 2019</p>
+		<p>Copyright 2019. All rights reserved.</p>
 	</footer>
 </html>
