--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img src="https://images.pexels.com/photos/257385/pexels-photo-257385.jpeg" width="300" height="150"><br/>
         
         <h2>Walidacja</h2>
-        <p><a href="https://pasteboard.co/I8tOdq0.png" target="_blank">Wynik walidacji</a></p>
+        <p><a href="https://pasteboard.co/I8tOdq0.png" target="_blank">To jest wynik walidacji</a></p>
     </body>
 	<footer>
 		<p>Copyright 2019. All rights reserved.</p>
